# tommy-agent

./: .gitignore  MEMORY.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: __init__.py
backend/app/agent_framework/: __init__.py  agent.py  api.py  api_schemas.py  approvals.py  checkpointing.py  context.py  context_builder.py  events.py  hermes_delegate.py  llm.py  local_memory.py  memory.py  orchestrator.py  paths.py  prompts.py  runs.py  settings.py  skills.py  state.py  store.py  tools.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline_schema.py  0002_prompt_snapshots_and_memory_injections.py  0003_memory_platform.py  0004_tool_artifacts.py  0005_skills_forge.py  0006_subagent_runs.py  0007_run_metrics.py
backend/tests/: conftest.py  test_approvals.py  test_cognitive_graph.py  test_cognitive_graph_e2e.py  test_context_builder.py  test_events.py  test_extensions.py  test_graph_runtime.py  test_health.py  test_memory_platform.py  test_message_writer.py  test_model_options.py  test_observability.py  test_prompt_snapshots.py  test_run_event_service.py  test_run_manager_mock.py  test_skills_forge.py  test_store_messages.py  test_store_runs.py  test_subagents.py  test_tool_path_safety.py  test_tool_runtime.py
backend/tests/api/: test_activation_trace.py  test_attachments.py  test_health.py  test_messages_edit_rerun.py  test_prompts.py  test_run_summary.py  test_search.py  test_session_management.py
backend/tests/graph/: test_async_action_node.py  test_cognitive_graph.py  test_cognitive_graph_e2e.py  test_routing.py
backend/tests/memory_platform/: test_memory_harness.py  test_memory_platform.py
backend/tests/observability/: test_observability.py
backend/tests/runtime/: test_events.py  (+8 more)
(+301 files in other folders)
