[project]
name = "tommy-agent-backend"
version = "0.1.0"
description = "LangGraph-first agent runtime with local-first memory and streaming APIs."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres",
    "langchain-core>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "langchain-openai>=0.3.0",
    "psycopg[binary,pool]",
    "pydantic>=2.0",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "opentelemetry-api>=1.41.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
